exhaustive rename: remove all lynch/javabot references, improve memory to 100 messages with 50 context

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "javabot",
   "version": "1.0.0",
-  "description": "Discord bot with David Lynch personality that handles GitHub commits for game development",
+  "description": "Discord bot with Doc Sportello personality that generates Phaser 3 games and handles GitHub commits",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
