--- a/projectmetadata.json
+++ b/projectmetadata.json
@@ -50,5 +50,13 @@
   "droid-union": {
     "icon": "🌐",
     "description": "A Star Wars themed labor politics advocacy site celebrating droid worker rights and unionization, with interactive visuals inspired by the Phantom Menace including Trade Federation aesthetics, battle droid solidarity, and worker empowerment messaging"
+  },
+  "index": {
+    "icon": "🌐",
+    "description": "Index"
+  },
+  "noodle_inventory": {
+    "icon": "🌐",
+    "description": "Noodle_inventory"
   }
 }
