--- a/projectmetadata.json
+++ b/projectmetadata.json
@@ -54,5 +54,9 @@
   "noodle_inventory": {
     "icon": "🌐",
     "description": "Noodle_inventory"
+  },
+  "rat_bushwick": {
+    "icon": "🌐",
+    "description": "A humorous guide to things to do in Bushwick for a hungry rat, featuring funny rat visualizations, ASCII art, and pixel animations. Includes rat-themed activities like dumpster diving, pizza rat expeditions, bodega raids, and more with interactive elements and retro arcade styling."
   }
 }
