--- a/projectmetadata.json
+++ b/projectmetadata.json
@@ -82,5 +82,9 @@
   "terminal-memory": {
     "icon": "🎮",
     "description": "Interactive memory matching game to learn terminal commands. Flip cards to match terminal commands with their descriptions. Includes common commands like ls, cd, mkdir, rm, grep, chmod, etc. Track score and time. Retro arcade aesthetic with flip animations."
+  },
+  "frog_whack_a_mole": {
+    "icon": "🎮",
+    "description": "A whack-a-mole style game featuring the wide-eyed surprised frog meme. Frogs pop up randomly in a grid of holes, player clicks/taps them to score points before they disappear. Includes score tracking, timer, difficulty levels, and sound effects. Frogs appear faster as difficulty increases."
   }
 }
