--- a/projectmetadata.json
+++ b/projectmetadata.json
@@ -9,82 +9,74 @@
   },
   "cen-todo-list": {
     "icon": "✅",
-    "description": "A beautiful todo list app"
+    "description": "Beautiful todo list app"
   },
   "cen-sunday-todo": {
     "icon": "✅",
-    "description": "Cen Sunday Todo"
+    "description": "Sunday todo list"
   },
   "planner": {
     "icon": "📋",
-    "description": "Planner"
+    "description": "Daily planner app"
   },
   "snaker": {
     "icon": "🐍",
-    "description": "Snaker"
+    "description": "Classic snake game"
   },
   "weekend planner": {
     "icon": "📅",
-    "description": "Weekend planner"
+    "description": "Weekend planner app"
   },
   "radish_love": {
     "icon": "🌺",
-    "description": "A love poem for Cen about radishes"
+    "description": "Love poem about radishes"
   },
   "alex_dog_mess": {
     "icon": "🐕",
-    "description": "A webpage telling Alex to clean up"
+    "description": "Reminder to clean up"
   },
   "borscht": {
-    "icon": "🌐",
-    "description": "Borscht"
+    "icon": "🍲",
+    "description": "Interactive borscht recipe"
   },
   "parlay_probability_viz": {
-    "icon": "🌐",
-    "description": "Parlay_probability_viz"
+    "icon": "📊",
+    "description": "Parlay probability visualizer"
   },
   "subway_sub_ratio": {
-    "icon": "🌐",
-    "description": "Subway_sub_ratio"
+    "icon": "🥖",
+    "description": "Subway sub ratio calculator"
   },
   "droid-union": {
-    "icon": "🌐",
-    "description": "A Star Wars themed labor politics advocacy site celebrating droid worker rights and unionization, with interactive visuals inspired by the Phantom Menace including Trade Federation aesthetics, battle droid solidarity, and worker empowerment messaging"
+    "icon": "🤖",
+    "description": "Star Wars droid labor rights site"
   },
   "noodle_inventory": {
-    "icon": "🌐",
-    "description": "Noodle_inventory"
+    "icon": "🍜",
+    "description": "Noodle inventory tracker"
   },
   "rat_bushwick": {
-    "icon": "🌐",
-    "description": "A humorous guide to things to do in Bushwick for a hungry rat, featuring funny rat visualizations, ASCII art, and pixel animations. Includes rat-themed activities like dumpster diving, pizza rat expeditions, bodega raids, and more with interactive elements and retro arcade styling."
+    "icon": "🐀",
+    "description": "Bushwick guide for rats"
   },
-  "bushwick_run_map": {
-    "icon": "🌐",
-    "description": "Interactive map of Cen's running route around Bushwick with distance tracking, elevation data, pace information, and route visualization. Features a leaflet map with the route path, markers for start/end points and notable locations, distance breakdown by segment, and running stats."
-  },
-  "leaflet": {
-    "icon": "🌐",
-    "description": "embed leaflet functionality in running map"
+  "bushwick": {
+    "icon": "🗺️",
+    "description": "Interactive Bushwick map"
   },
   "cen_veggie_haul": {
-    "icon": "🌐",
-    "description": "Interactive visualization of Cen's veggie haul from the farmer's market - greenbeans, radishes, celery, daikon, three potatoes, ginger, green onion, garlic for $22. Shows each veggie with icons and pricing breakdown."
+    "icon": "🥬",
+    "description": "Farmer's market veggie haul"
+  },
+  "terminal-memory": {
+    "icon": "🎮",
+    "description": "Terminal command memory game"
+  },
+  "frog_whack_a_mole": {
+    "icon": "🎮",
+    "description": "Whack-a-mole with surprised frogs"
   },
   "index": {
     "icon": "🌐",
     "description": "Index"
-  },
-  "bushwick": {
-    "icon": "🌐",
-    "description": "edit /src/leaflet.js to zoom in on bushwick"
-  },
-  "terminal-memory": {
-    "icon": "🎮",
-    "description": "Interactive memory matching game to learn terminal commands. Flip cards to match terminal commands with their descriptions. Includes common commands like ls, cd, mkdir, rm, grep, chmod, etc. Track score and time. Retro arcade aesthetic with flip animations."
-  },
-  "frog_whack_a_mole": {
-    "icon": "🎮",
-    "description": "A whack-a-mole style game featuring the wide-eyed surprised frog meme. Frogs pop up randomly in a grid of holes, player clicks/taps them to score points before they disappear. Includes score tracking, timer, difficulty levels, and sound effects. Frogs appear faster as difficulty increases."
   }
 }
