add the visual diagram to the project

--- a/projectmetadata.json
+++ b/projectmetadata.json
@@ -82,5 +82,9 @@
   "basket-jam": {
     "icon": "🎮",
     "description": "A 2-on-2 arcade basketball game tribute to NBA Jam. Features simple controls (move, shoot/dunk, pass/steal), a turbo meter, and an 'On Fire' mechanic where making 3 shots in a row gives you infinite turbo and high accuracy. Uses HTML5 Canvas for rendering. Retro arcade aesthetic with mint green colors. Single player vs CPU."
+  },
+  "zach-errands": {
+    "icon": "✅",
+    "description": "A simple errand itinerary tracker for Zach's domestic tasks including getting paper towels and toilet paper. Should have a clean checklist interface with the ability to mark items as complete, add notes, and show store locations or reminders."
   }
 }
