--- a/projectmetadata.json
+++ b/projectmetadata.json
@@ -110,5 +110,13 @@
   "amtrak-journey": {
     "icon": "🎮",
     "description": "Interactive Amtrak journey from Penn Station to Rochester with games"
+  },
+  "index": {
+    "icon": "🌐",
+    "description": "Index"
+  },
+  "amtrak_journey": {
+    "icon": "🎮",
+    "description": "Interactive Amtrak journey from Penn Station to Rochester with stops, facts, and mini-games"
   }
 }
