add zach_deodorant page

--- a/projectmetadata.json
+++ b/projectmetadata.json
@@ -118,5 +118,9 @@
   "sampson_deodorant": {
     "icon": "🌐",
     "description": "A silly 90s-style infomercial visualization about"
+  },
+  "zach_deodorant": {
+    "icon": "🌐",
+    "description": "A silly 90s-style infomercial visualization about"
   }
 }
