--- a/projectmetadata.json
+++ b/projectmetadata.json
@@ -150,5 +150,9 @@
   "bubba_clicker": {
     "icon": "🎮",
     "description": "Modular clicker game chronicling Bubba the Horse's"
+  },
+  "pigman": {
+    "icon": "🐷",
+    "description": "Help the pig escape! Collect pellets while avoiding people with unique AI personalities"
   }
 }
