add tictactoe-confetti page

--- a/projectmetadata.json
+++ b/projectmetadata.json
@@ -261,162 +261,12 @@
       "description": "Shift tracking console grid",
       "icon": "📆",
       "collection": "utilities-apps"
+    },
+    "tictactoe-confetti": {
+      "title": "Tictactoe Confetti",
+      "description": "Tic-tac-toe game Tictactoe",
+      "icon": "🎮",
+      "collection": "unsorted"
     }
-  },
-  "ai-agency-flier": {
-    "icon": "🌐",
-    "description": "Ai Agency Flier"
-  },
-  "alex_dog_mess": {
-    "icon": "🌐",
-    "description": "Alex_dog_mess"
-  },
-  "amtrak-journey": {
-    "icon": "🌐",
-    "description": "Amtrak Journey"
-  },
-  "anniversary": {
-    "icon": "🌐",
-    "description": "Anniversary"
-  },
-  "basket-jam": {
-    "icon": "🌐",
-    "description": "Basket Jam"
-  },
-  "bills-superbowl-infographic": {
-    "icon": "🌐",
-    "description": "Bills Superbowl Infographic"
-  },
-  "bills_qb_game": {
-    "icon": "🎮",
-    "description": "Bills_qb_game"
-  },
-  "borscht": {
-    "icon": "🌐",
-    "description": "Borscht"
-  },
-  "bubba_clicker": {
-    "icon": "🌐",
-    "description": "Bubba_clicker"
-  },
-  "bushwick": {
-    "icon": "🌐",
-    "description": "Bushwick"
-  },
-  "cen-sunday-todo": {
-    "icon": "✅",
-    "description": "Cen Sunday Todo"
-  },
-  "cen-todo-list": {
-    "icon": "✅",
-    "description": "Cen Todo List"
-  },
-  "cen_veggie_haul": {
-    "icon": "🌐",
-    "description": "Cen_veggie_haul"
-  },
-  "digital_sisyphus": {
-    "icon": "🌐",
-    "description": "Digital_sisyphus"
-  },
-  "double_dragon_beatem_up": {
-    "icon": "🌐",
-    "description": "Double_dragon_beatem_up"
-  },
-  "droid-union": {
-    "icon": "🌐",
-    "description": "Droid Union"
-  },
-  "frog_whack_a_mole": {
-    "icon": "🌐",
-    "description": "Frog_whack_a_mole"
-  },
-  "frogger": {
-    "icon": "🌐",
-    "description": "Frogger"
-  },
-  "index": {
-    "icon": "🌐",
-    "description": "Index"
-  },
-  "jackson_biscuit_game": {
-    "icon": "🎮",
-    "description": "Jackson_biscuit_game"
-  },
-  "noodle_inventory": {
-    "icon": "🌐",
-    "description": "Noodle_inventory"
-  },
-  "parlay_probability_viz": {
-    "icon": "🌐",
-    "description": "Parlay_probability_viz"
-  },
-  "pigman": {
-    "icon": "🌐",
-    "description": "Pigman"
-  },
-  "planner": {
-    "icon": "📋",
-    "description": "Planner"
-  },
-  "radish_love": {
-    "icon": "🌐",
-    "description": "Radish_love"
-  },
-  "rat_bushwick": {
-    "icon": "🌐",
-    "description": "Rat_bushwick"
-  },
-  "red-siren-protocol": {
-    "icon": "🌐",
-    "description": "Red Siren Protocol"
-  },
-  "rubi_infomercial": {
-    "icon": "🌐",
-    "description": "Rubi_infomercial"
-  },
-  "sampson_deodorant": {
-    "icon": "🌐",
-    "description": "Sampson_deodorant"
-  },
-  "snaker": {
-    "icon": "🐍",
-    "description": "Snaker"
-  },
-  "space-invaders": {
-    "icon": "🌐",
-    "description": "Space Invaders"
-  },
-  "subway_sub_ratio": {
-    "icon": "🌐",
-    "description": "Subway_sub_ratio"
-  },
-  "sudoku": {
-    "icon": "🌐",
-    "description": "Sudoku"
-  },
-  "task-warning": {
-    "icon": "✅",
-    "description": "Task Warning"
-  },
-  "terminal-memory": {
-    "icon": "🌐",
-    "description": "Terminal Memory"
-  },
-  "weekend planner": {
-    "icon": "📋",
-    "description": "Weekend planner"
-  },
-  "zach-errands": {
-    "icon": "🌐",
-    "description": "Zach Errands"
-  },
-  "zach-sleep-letter": {
-    "icon": "🌐",
-    "description": "Zach Sleep Letter"
-  },
-  "zach_work_schedule": {
-    "icon": "🌐",
-    "description": "Zach_work_schedule"
   }
 }
