add coffee in snow

--- a/projectmetadata.json
+++ b/projectmetadata.json
@@ -294,6 +294,19 @@
       "description": "noir letter interactive reveal",
       "collection": "stories-content",
       "hidden": false
+    },
+    "coffee-steam-viz": {
+      "title": "Coffee in Snow",
+      "icon": "☕",
+      "description": "cozy particle coffee ritual",
+      "collection": "utilities-apps",
+      "hidden": false
+    },
+    "winter-brew": {
+      "title": "Winter Brew",
+      "description": "Winter Brew noir project",
+      "icon": "🌐",
+      "collection": "unsorted"
     }
   }
 }
