--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "axios-retry": "^4.5.0",
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
-    "simple-git": "^3.20.0"
+    "express": "^4.22.1",
+    "simple-git": "^3.20.0",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
