add tv intervention infomercial

--- a/projectmetadata.json
+++ b/projectmetadata.json
@@ -385,6 +385,13 @@
       "description": "warm tuesday check-in letter",
       "collection": "stories-content",
       "hidden": false
+    },
+    "tv-intervention-infomercial": {
+      "title": "TV Intervention Infomercial",
+      "icon": "📺",
+      "description": "late-night hype parody",
+      "collection": "stories-content",
+      "hidden": false
     }
   }
 }
