--- a/projectmetadata.json
+++ b/projectmetadata.json
@@ -419,6 +419,13 @@
       "description": "atmospheric holiday snow viz",
       "collection": "utilities-apps",
       "hidden": false
+    },
+    "quantum-hoax-infomercial": {
+      "title": "Quantum Sock Sorter 3000",
+      "icon": "📺",
+      "description": "Noir sock sorter hoax",
+      "collection": "stories-content",
+      "hidden": false
     }
   }
 }
