--- a/projectmetadata.json
+++ b/projectmetadata.json
@@ -44,7 +44,7 @@
       "title": "Site Inventory",
       "icon": "🗂️",
       "description": "repository scanner utility",
-      "collection": "utilities-apps",
+      "collection": "featured",
       "hidden": false
     },
     "double_dragon_beatem_up": {
@@ -75,13 +75,13 @@
       "title": "Terminal Memory",
       "description": "CRT card match challenge",
       "icon": "🧠",
-      "collection": "arcade-games"
+      "collection": "featured"
     },
     "rat_bushwick": {
       "title": "Rat Bushwick Log",
       "description": "Underground survival brief",
       "icon": "🐀",
-      "collection": "stories-content"
+      "collection": "featured"
     },
     "rhythm-test": {
       "title": "Rhythm Test",
