feat: add openrouter fallback api key with auto-switch on 402 errors

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ GITHUB_REPO_NAME=javabot
 GITHUB_REPO_URL=https://github.com/milwrite/javabot/
 CHANNEL_ID=your_dedicated_channel_id
 OPENROUTER_API_KEY=your_openrouter_api_key
+OPENROUTER_FALLBACK=your_fallback_openrouter_api_key
