--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ GITHUB_REPO_URL=https://github.com/milwrite/javabot/
 CHANNEL_ID=your_dedicated_channel_id
 OPENROUTER_API_KEY=your_openrouter_api_key
 OPENROUTER_FALLBACK=your_fallback_openrouter_api_key
+
+# Optional: PostgreSQL for long-term logging
+DATABASE_URL=postgresql://user:password@host:port/database
