Revert "add peanut city"
This reverts commit 78546ba2a0ed0c645f29c655d1fc11474191d1fd.

--- a/projectmetadata.json
+++ b/projectmetadata.json
@@ -67,10 +67,9 @@
     },
     "peanut-city": {
       "title": "Peanut City",
-      "icon": "📖",
-      "description": "shadowy peanut city story",
-      "collection": "stories-content",
-      "hidden": false
+      "description": "Noir detective horror tale",
+      "icon": "🥜",
+      "collection": "featured"
     },
     "terminal-memory": {
       "title": "Terminal Memory",
