add lightsaber duel game with ai opponent

--- a/projectmetadata.json
+++ b/projectmetadata.json
@@ -520,6 +520,13 @@
       "description": "noir saber duel arcade",
       "collection": "arcade-games",
       "hidden": false
+    },
+    "lightsaber-duel": {
+      "title": "Lightsaber Duel",
+      "icon": "⚔️",
+      "description": "Fight AI with saber clashes",
+      "collection": "arcade-games",
+      "hidden": false
     }
   }
 }
