Revert "delete lightsaber-duel.html and remove from metadata"
This reverts commit 3843b3965c834b3c4812f5c2986e6e4fe4923f5a.

--- a/projectmetadata.json
+++ b/projectmetadata.json
@@ -521,6 +521,13 @@
       "collection": "arcade-games",
       "hidden": false
     },
+    "lightsaber-duel": {
+      "title": "Lightsaber Duel",
+      "icon": "⚔️",
+      "description": "Fight AI with saber clashes",
+      "collection": "arcade-games",
+      "hidden": false
+    },
     "lightsaber-combat": {
       "title": "Lightsaber Combat",
       "icon": "🕹️",
